samples/_failures_safe/1761181408_f08d91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d37b751d.c: In function ‘main’:
./samples/SAFE/__tmp_d37b751d.c:158:13: error: expected declaration or statement at end of input
  158 |             }
      |             ^
./samples/SAFE/__tmp_d37b751d.c:158:13: error: expected declaration or statement at end of input
